cilium-gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  # - name: https
  #   protocol: HTTPS
  #   port: 443
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - name: tls-secret
